Fixed alignment

--- a/src/Container/Dashboard/MyBills/MyBills.css
+++ b/src/Container/Dashboard/MyBills/MyBills.css
@@ -1,7 +1,7 @@
 body{margin:0;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif;font-size:1rem;font-weight:400;line-height:1.5;color:#212529;text-align:left;background-color:#fff}
 .bills{
     display: block;
-    margin-left: 30%;
+    margin: 0 21% 0 36%;
     padding-top: 8%;
 }
 .each-bill{
